[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/LevelBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/images/hub_background.png" type="Texture" id=2]
[ext_resource path="res://scenes/DoorTrigger.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/levels/WarehouseWing1.tres" type="Resource" id=4]
[ext_resource path="res://scenes/levels/HubLevel.gd" type="Script" id=5]
[ext_resource path="res://resources/levels/ScienceLevel1.tres" type="Resource" id=6]
[ext_resource path="res://assets/images/BlandDoor2.png" type="Texture" id=7]
[ext_resource path="res://scenes/DoorTriggerFinalHub.gd" type="Script" id=8]
[ext_resource path="res://scenes/GismoTrigger.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.201, 6.67215 )

[sub_resource type="Animation" id=3]
resource_name = "DoorOpen"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Reset"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="HubLevel" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="Background" parent="." index="1"]
texture = ExtResource( 2 )

[node name="StartPosition" parent="." index="8"]
position = Vector2( 0.356995, 60.6871 )

[node name="DoorTrigger" parent="." index="10" instance=ExtResource( 3 )]
position = Vector2( -81.1446, 16.3957 )
LevelResource = ExtResource( 4 )

[node name="DoorTrigger2" type="Area2D" parent="." index="11"]
position = Vector2( 3, 14.396 )
collision_layer = 128
collision_mask = 128
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorTrigger2" index="0"]
position = Vector2( 0.221706, -1.27249 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="DoorTrigger2" index="1"]
position = Vector2( -14.6979, -31.6582 )
texture = ExtResource( 7 )
centered = false
hframes = 3
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="DoorTrigger2" index="2"]
autoplay = "Reset"
anims/DoorOpen = SubResource( 3 )
anims/Reset = SubResource( 4 )

[node name="GismoTrigger" parent="DoorTrigger2" index="3" instance=ExtResource( 9 )]
position = Vector2( 0.180847, -59.4986 )
GismoText = "This would go somewhere if the developer could have had more time. Oh well. Good work getting here! THE END."

[node name="DoorTrigger3" parent="." index="12" instance=ExtResource( 3 )]
position = Vector2( 96, 16.396 )
LevelResource = ExtResource( 6 )

[connection signal="area_entered" from="DoorTrigger2" to="DoorTrigger2" method="_on_PlayerTrigger_area_entered" flags=6]
